<resources>
    <string name="app_name">UTeM Smart Parking System</string>
    <string name="parking_lots_occupancy_status">Parking Lots Occupancy Status</string>
    <string name="total_parking_available">Total Parking Available :</string>
    <string name="number_of_occupied_lots">Number of Occupied Lots</string>
    <string name="button">Check Detail</string>
    <string name="number_of_illegal_parking">Number of Illegal Parking</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="id">ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome">Welcome !</string>
    <string name="email" translatable="false">Email</string>
    <string name="login">LOGIN</string>
    <string name="welcome_utem">Welcome to UTeM IoT Parking System !</string>
    <string name="password">Password</string>
    <string name="illegal_parking_detect">Illegal Parking DETECT !</string>
    <string name="lots_id">Lots ID</string>
    <string name="time">Time</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="renew">Renew</string>
    <string name="logout">Logout</string>
    <string name="illegal_parking">Illegal Parking</string>
    <string name="check_occupancy">Check Occupancy</string>
    <string name="parking_lots_detected">Parking Lots Detected !</string>
    <string name="parking">Parking</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="get_paired_devices">Get Paired Devices</string>
    <string name="discoverable">Discoverable</string>
    <string name="parking_lots_list">Parking Lots List</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="device_name">Device Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

</resources>